product_docs/docs/mysql_data_adapter/2.6.0/05_updating_the_mysql_data_adapter.mdx
---
title: "Updating the MySQL Foreign Data Wrapper"
---

<div id="updating_the_mysql_data_adapter" class="registered_link"></div>

**Updating an RPM Installation**

If you have an existing RPM installation of MySQL Foreign Data Wrapper, you can use yum or dnf to upgrade your repository configuration file and update to a more recent product version. To update the `edb.repo` file, assume superuser privileges and enter:

-   On RHEL or CentOS 7:

    `yum upgrade edb-repo`

-   On RHEL or CentOS 8:

    `dnf upgrade edb-repo`

yum or dnf will update the `edb.repo` file to enable access to the current EDB repository, configured to connect with the credentials specified in your `edb.repo` file. Then, you can use yum or dnf to upgrade any installed packages:

-   On RHEL or CentOS 7:

    `yum upgrade edb-as<xx>-mysql<x>_fdw`

    where `xx` is the server version number, and `x` is the supported release version number of MySQL. For example, to upgrade MySQL 5.0 on RHEL 7:

    `yum upgrade edb-as<xx>-mysql5_fdw`

-   On RHEL or CentOS 8:

    `dnf upgrade edb-as<xx>-mysql8_fdw`

- For MySQL 8:

    -  On RHEL or CentOS 7:
       ```text
       sudo yum -y upgrade edb-as<xx>-mysql8_fdw* mysql-community-devel
       ```
    -  On RHEL or CentOS 8:
       ```text
       sudo dnf -y upgrade edb-as<xx>-mysql8_fdw* mysql-community-devel
       ```
- For MySQL 5:
    -  On RHEL or CentOS 7:
       ```text
       sudo yum -y upgrade edb-as<xx>-mysql5_fdw* mysql-community-devel
       ```
    -  On RHEL or CentOS 8:
       ```text
       sudo dnf -y upgrade edb-as<xx>-mysql5_fdw* mysql-community-devel
       ```

**Updating MongoDB Foreign Data Wrapper on a Debian or Ubuntu Host**

In the previously released version of MySQL FDW, the package name for MySQL FDW was `edb-as*-mysql-fdw`. In the current release, two separate packages have been made available for MySQL 5 and MySQL 8 i.e `edb-as*-mysql5-fdw` and `edb-as*-mysql8-fdw` Respectively. 

If you are upgrading from MySQL FDW 2.5.5 to 2.6.0 for MySQL 5, then installation of `edb-as*mysql5-fdw` package for version 2.6.0 will automatically remove the previously installed package `edb-as*-mysql-fdw`.

If you are upgrading from MySQL FDW 2.5.5 to 2.6.0 for MySQL 8, then before installing the `edb-as*-mysql8-fdw` package for version 2.6.0, you need to manually remove the following packages:
- `default-mysqlclient-dev` 
- `edb-as*-mysql-fdw`

Use the following command to upgrade the FDW installation:
- For MySQL 8: 
  ```text
  apt-get upgrade edb-as<xx>-mysql8-fdw*
  ```
- For MySQL 5:
  ```text
  apt-get upgrade edb-as<xx>-mysql5-fdw* 
  ```
where `xx` is the server version number.
